Add test coverage to GeneralOrderService and refactor tests for cover letter